[package]
name = 'westmint-runtime'
version = '1.0.0'
authors = ["Axia Technologies <admin@axiacoin.network>"]
edition = '2018'
description = "ALPHANET variant of Statemint allychain runtime"

[dependencies]
codec = {  git = "https://github.com/axia-tech/axia-scale-codec", package = "axia-scale-codec", branch = "v2.3.1", version = "2.3.0", default-features = false, features = ["derive", "max-encoded-len"] }
hex-literal = { version = '0.3.1', optional = true }
log = { version = "0.4.14", default-features = false }
allychain-info = { path = "../pallets/allychain-info", default-features = false }
scale-info = { git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
smallvec = "1.6.1"

# Axlib dependencies
sp-std = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-api = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-version = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-session = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-offchain = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-block-builder = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-transaction-pool = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-inherents = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-consensus-aura = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }

frame-benchmarking = { git = "https://github.com/axia-tech/axlib", optional = true, default-features = false, branch = "dev" }
frame-system-benchmarking = { git = "https://github.com/axia-tech/axlib", optional = true, default-features = false, branch = "dev" }
frame-support = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
frame-executive = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
frame-system = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
frame-system-rpc-runtime-api = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-assets = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-aura = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-authorship = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-balances = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-multisig = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-proxy = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-randomness-collective-flip = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-session = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-sudo = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-timestamp = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-transaction-payment = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-uniques = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-utility = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }

node-primitives = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }

# Cumulus dependencies
cumulus-pallet-aura-ext = { path = "../../pallets/aura-ext", default-features = false }
cumulus-pallet-allychain-system = { path = "../../pallets/allychain-system", default-features = false }
cumulus-primitives-core = { path = "../../primitives/core", default-features = false }
cumulus-primitives-timestamp = { path = "../../primitives/timestamp", default-features = false }
cumulus-primitives-utility = { path = "../../primitives/utility", default-features = false }
cumulus-pallet-dmp-queue = { path = "../../pallets/dmp-queue", default-features = false }
cumulus-pallet-xcmp-queue = { path = "../../pallets/xcmp-queue", default-features = false }
cumulus-pallet-xcm = { path = "../../pallets/xcm", default-features = false }
cumulus-pallet-session-benchmarking = {path = "../../pallets/session-benchmarking", default-features = false, version = "3.0.0"}
cumulus-ping = { path = "../pallets/ping", default-features = false }
pallet-asset-tx-payment = { path = "../../pallets/asset-tx-payment", default-features = false }
pallet-collator-selection = { path = "../../pallets/collator-selection", default-features = false }
allychains-common = { path = "../allychains-common", default-features = false }

# AXIA dependencies
axia-allychain = { git = "https://github.com/axia-tech/axia", default-features = false, branch = "dev" }
axia-runtime-common = { git = "https://github.com/axia-tech/axia", default-features = false, branch = "dev" }
xcm = { git = "https://github.com/axia-tech/axia", default-features = false, branch = "dev" }
xcm-builder = { git = "https://github.com/axia-tech/axia", default-features = false, branch = "dev" }
xcm-executor = { git = "https://github.com/axia-tech/axia", default-features = false, branch = "dev" }
pallet-xcm = { git = "https://github.com/axia-tech/axia", default-features = false, branch = "dev" }

[dev-dependencies]
hex-literal = "0.3.1"

[build-dependencies]
axlib-wasm-builder = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

[features]
default = [ "std" ]
runtime-benchmarks = [
	'cumulus-pallet-session-benchmarking/runtime-benchmarks',
	'hex-literal',
	'sp-runtime/runtime-benchmarks',
	'xcm-builder/runtime-benchmarks',
	'frame-benchmarking',
	'frame-system-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
	'pallet-assets/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	'pallet-multisig/runtime-benchmarks',
	'pallet-proxy/runtime-benchmarks',
	'pallet-uniques/runtime-benchmarks',
	'pallet-utility/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
	'pallet-xcm/runtime-benchmarks',
	'pallet-collator-selection/runtime-benchmarks',
]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"log/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-assets/std",
	"pallet-authorship/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-multisig/std",
	"pallet-proxy/std",
	"pallet-randomness-collective-flip/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-uniques/std",
	"pallet-utility/std",
	"allychain-info/std",
	"cumulus-pallet-aura-ext/std",
	"pallet-asset-tx-payment/std",
	"pallet-collator-selection/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-allychain-system/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-pallet-xcm/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"cumulus-ping/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"sp-consensus-aura/std",
	"node-primitives/std",
	"allychains-common/std",
]
