[package]
name = "cumulus-client-cli"
version = "0.1.0"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"

[dependencies]
structopt = "0.3.3"

# Axlib dependencies
sc-cli = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-service = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
