[package]
name = "cumulus-client-network"
version = "0.1.0"
authors = ["Axia Technologies <admin@axiacoin.network>"]
description = "Cumulus-specific networking protocol"
edition = "2018"

[dependencies]
# Axlib deps
sp-blockchain = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-consensus = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-api = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-client-api = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

# AXIA deps
axia-primitives = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-node-primitives = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-client = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-allychain = { git = "https://github.com/axia-tech/axia", branch = "dev" }

# other deps
codec = {  git = "https://github.com/axia-tech/axia-scale-codec", package = "axia-scale-codec", branch = "v2.3.1", version = "2.3.0", features = [ "derive" ] }
futures = { version = "0.3.1", features = ["compat"] }
futures-timer = "3.0.2"
tracing = "0.1.22"
parking_lot = "0.10.2"
derive_more = "0.99.2"

[dev-dependencies]
tokio = { version = "1.10", features = ["macros"] }

# Cumulus deps
cumulus-test-service = { path = "../../test/service" }
cumulus-primitives-core = { path = "../../primitives/core" }

# AXIA deps
axia-test-client = { git = "https://github.com/axia-tech/axia", branch = "dev" }

# axlib deps
sc-client-api = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-keyring = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-keystore = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-consensus = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-cli = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
axlib-test-utils = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-service = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
