[package]
name = "cumulus-client-pov-recovery"
version = "0.1.0"
authors = ["Axia Technologies <admin@axia.io>"]
description = "Cumulus-specific networking protocol"
edition = "2018"

[dependencies]
# Axlib deps
sp-consensus = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-maybe-compressed-blob = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-client-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-consensus = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

# AXIA deps
axia-primitives = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-node-primitives = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-overseer = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-node-subsystem = { git = "https://github.com/axia-tech/axia", branch = "dev" }

# Cumulus deps
cumulus-primitives-core = { path = "../../primitives/core" }

# other deps
codec = { package = "axia-scale-codec", version = "2.3.0", features = [ "derive" ] }
futures = { version = "0.3.1", features = ["compat"] }
futures-timer = "3.0.2"
tracing = "0.1.22"
rand = "0.8.3"

[dev-dependencies]
tokio = { version = "1.10", features = ["macros"] }

# Cumulus deps
cumulus-test-service = { path = "../../test/service" }

# axlib deps
sc-client-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-cli = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
axlib-test-utils = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-service = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
