[package]
name = "pallet-asset-tx-payment"
version = "0.1.0"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://axlib.io"
repository = "https://github.com/axiatech/cumulus/"
description = "pallet to manage transaction payments in assets"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Axlib dependencies
frame-support = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
frame-system = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-transaction-payment = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-std = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }

# Other dependencies
codec = { package = "axia-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }

[dev-dependencies]
smallvec = "1.4.1"
serde_json = "1.0.41"

pallet-assets = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
pallet-authorship = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
pallet-balances = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-storage = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-core/std",
	"pallet-transaction-payment/std",
]
try-runtime = ["frame-support/try-runtime"]
