[package]
name = "cumulus-pallet-aura-ext"
version = "0.1.0"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"
description = "AURA consensus extension pallet for allychains"

[dependencies]
# Axlib dependencies
frame-support = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
frame-system = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
frame-executive = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
pallet-aura = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-consensus-aura = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-std = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-application-crypto = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }

# Other Dependencies
codec = { package = "axia-scale-codec", version = "2.3.0", default-features = false, features = ["derive"]}
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

[dev-dependencies]
cumulus-pallet-allychain-system = { path = "../allychain-system" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"frame-support/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-system/std",
	"frame-executive/std",
	"pallet-aura/std",
	"sp-consensus-aura/std",
	"sp-application-crypto/std",
]
