[package]
name = "cumulus-pallet-allychain-system"
version = "0.1.0"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"
description = "Base pallet for cumulus-based allychains"

[dependencies]
# Cumulus dependencies
cumulus-primitives-core = { path = "../../primitives/core", default-features = false }
cumulus-primitives-allychain-inherent = { path = "../../primitives/allychain-inherent", default-features = false }
cumulus-pallet-allychain-system-proc-macro = { path = "proc-macro", default-features = false }

# AXIA dependencies
axia-allychain = { git = "https://github.com/axia-tech/axia", default-features = false, features = [ "wasm-api" ], branch = "dev" }
xcm = { git = "https://github.com/axia-tech/axia", default-features = false, branch = "dev" }

# Axlib dependencies
frame-support = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
pallet-balances = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-inherents = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-std = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-version = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
frame-system = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-state-machine = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-trie = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-externalities = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }

# Other Dependencies
codec = { package = "axia-scale-codec", version = "2.3.0", default-features = false, features = ["derive"]}
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
environmental = { version = "1.1.2", default-features = false }

[dev-dependencies]
# Other Dependencies
hex-literal = "0.2.1"
lazy_static = "1.4"

# Axlib dependencies
sp-version = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-client-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-keyring = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-tracing = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

# Cumulus dependencies
cumulus-test-client = { path = "../../test/client" }
cumulus-test-relay-sproof-builder = { path = "../../test/relay-sproof-builder" }

[features]
default = [ "std" ]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"pallet-balances/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"log/std",
	"sp-state-machine/std",
	"sp-trie/std",
	"sp-externalities/std",
	"frame-system/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-allychain-inherent/std",
	"cumulus-pallet-allychain-system-proc-macro/std",
	"environmental/std",
	"xcm/std"
]
