[package]
name = "cumulus-pallet-xcmp-queue"
version = "0.1.0"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"

[dependencies]
# Other dependencies
codec = { package = "axia-scale-codec", version = "2.3.0", features = [ "derive" ], default-features = false }
rand_chacha = { version = "0.3.0", default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }

# Axlib Dependencies
sp-std = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
frame-support = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
frame-system = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }

# AXIA Dependencies
xcm = { git = "https://github.com/axia-tech/axia", default-features = false, branch = "dev" }
xcm-executor = { git = "https://github.com/axia-tech/axia", default-features = false, branch = "dev" }

# Cumulus Dependencies
cumulus-primitives-core = { path = "../../primitives/core", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
cumulus-pallet-allychain-system = { path = "../allychain-system" }
xcm-builder = { git = "https://github.com/axia-tech/axia", branch = "dev" }
pallet-balances = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"cumulus-primitives-core/std",
	"xcm/std",
	"xcm-executor/std",
]
